css: fix spacing of profile items

--- a/static/main.css
+++ b/static/main.css
@@ -142,7 +142,7 @@ main {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  gap: 2rem 0;
+  gap: 2rem;
 }
 
 .profile {
